==> lamik/MAX30102_STM32_HAL/Src/MAX30102/MAX30102.c <==
#include "main.h"
#include "i2c.h"
#include "MAX30102/MAX30102.h"
#include "MAX30102/algorithm.h"
#define I2C_TIMEOUT	1

MAX30102_STATUS Max30102_WriteReg(uint8_t uch_addr, uint8_t uch_data)
{
	if(HAL_I2C_Mem_Write(i2c_max30102, MAX30102_ADDRESS, uch_addr, 1, &uch_data, 1, I2C_TIMEOUT) == HAL_OK)
		return MAX30102_OK;
	return MAX30102_ERROR;
}

MAX30102_STATUS Max30102_ReadReg(uint8_t uch_addr, uint8_t *puch_data)
{
	if(HAL_I2C_Mem_Read(i2c_max30102, MAX30102_ADDRESS, uch_addr, 1, puch_data, 1, I2C_TIMEOUT) == HAL_OK)
		return MAX30102_OK;
	return MAX30102_ERROR;
}

MAX30102_STATUS Max30102_ReadFifo(volatile uint32_t *pun_red_led, volatile uint32_t *pun_ir_led)
{
	uint32_t un_temp;
	*pun_red_led=0;
	*pun_ir_led=0;
	uint8_t ach_i2c_data[6];

	if(HAL_I2C_Mem_Read(i2c_max30102, MAX30102_ADDRESS, REG_FIFO_DATA, 1, ach_i2c_data, 6, I2C_TIMEOUT) != HAL_OK)
	{
		return MAX30102_ERROR;
	}
	un_temp=(unsigned char) ach_i2c_data[0];
	un_temp<<=16;
	*pun_red_led+=un_temp;
	un_temp=(unsigned char) ach_i2c_data[1];
	un_temp<<=8;
	*pun_red_led+=un_temp;
	un_temp=(unsigned char) ach_i2c_data[2];
	*pun_red_led+=un_temp;

	un_temp=(unsigned char) ach_i2c_data[3];
	un_temp<<=16;
	*pun_ir_led+=un_temp;
	un_temp=(unsigned char) ach_i2c_data[4];
	un_temp<<=8;
	*pun_ir_led+=un_temp;
	un_temp=(unsigned char) ach_i2c_data[5];
	*pun_ir_led+=un_temp;
	*pun_red_led&=0x03FFFF;  //Mask MSB [23:18]
	*pun_ir_led&=0x03FFFF;  //Mask MSB [23:18]

	return MAX30102_OK;
}

MAX30102_STATUS Max30102_FifoWritePointer(uint8_t Address)
{
	if(MAX30102_OK != Max30102_WriteReg(REG_FIFO_WR_PTR,(Address & 0x1F)))  //FIFO_WR_PTR[4:0]
			return MAX30102_ERROR;
	return MAX30102_OK;
}

MAX30102_STATUS Max30102_FifoOverflowCounter(uint8_t Address)
{
	if(MAX30102_OK != Max30102_WriteReg(REG_OVF_COUNTER,(Address & 0x1F)))  //OVF_COUNTER[4:0]
			return MAX30102_ERROR;
	return MAX30102_OK;
}

MAX30102_STATUS Max30102_FifoReadPointer(uint8_t Address)
{
	if(MAX30102_OK != Max30102_WriteReg(REG_FIFO_RD_PTR,(Address & 0x1F)))  //FIFO_RD_PTR[4:0]
			return MAX30102_ERROR;
	return MAX30102_OK;
}

MAX30102_STATUS Max30102_FifoSampleAveraging(uint8_t Value)
{
	uint8_t tmp;
	if(MAX30102_OK != Max30102_ReadReg(REG_FIFO_CONFIG, &tmp))
		return MAX30102_ERROR;
	tmp &= ~(0x07);
	tmp |= (Value&0x07)<<5;
	if(MAX30102_OK != Max30102_WriteReg(REG_FIFO_CONFIG, tmp))
		return MAX30102_ERROR;

	return MAX30102_OK;
}

MAX30102_STATUS Max30102_FifoRolloverEnable(uint8_t Enable)
{
	return Max30102_WriteRegisterBit(REG_FIFO_CONFIG, FIFO_CONF_FIFO_ROLLOVER_EN_BIT, (Enable & 0x01));
}

MAX30102_STATUS Max30102_FifoAlmostFullValue(uint8_t Value)
{
	if(Value < 17) Value = 17;
	if(Value > 32) Value = 32;
	Value = 32 - Value;
	uint8_t tmp;
	if(MAX30102_OK != Max30102_ReadReg(REG_FIFO_CONFIG, &tmp))
		return MAX30102_ERROR;
	tmp &= ~(0x0F);
	tmp |= (Value & 0x0F);
	if(MAX30102_OK != Max30102_WriteReg(REG_FIFO_CONFIG, tmp))
		return MAX30102_ERROR;

	return MAX30102_OK;
}

MAX30102_STATUS Max30102_Reset(void)
{
	uint8_t tmp = 0xFF;
    if(MAX30102_OK != Max30102_WriteReg(REG_MODE_CONFIG,0x40))
        return MAX30102_ERROR;
    do
    {
    	if(MAX30102_OK != Max30102_ReadReg(REG_MODE_CONFIG, &tmp))
    		return MAX30102_ERROR;
    } while(tmp & (1<<6));

    return MAX30102_OK;
}

MAX30102_STATUS Max30102_SetMode(uint8_t Mode)
{
	uint8_t tmp;
	if(MAX30102_OK != Max30102_ReadReg(REG_MODE_CONFIG, &tmp))
		return MAX30102_ERROR;
	tmp &= ~(0x07);
	tmp |= (Mode & 0x07);
	if(MAX30102_OK != Max30102_WriteReg(REG_MODE_CONFIG, tmp))
		return MAX30102_ERROR;

	return MAX30102_OK;
}

MAX30102_STATUS Max30102_Led1PulseAmplitude(uint8_t Value)
{
	if(MAX30102_OK != Max30102_WriteReg(REG_LED1_PA, Value))
		return MAX30102_ERROR;
	return MAX30102_OK;
}

MAX30102_STATUS Max30102_Led2PulseAmplitude(uint8_t Value)
{
	if(MAX30102_OK != Max30102_WriteReg(REG_LED2_PA, Value))
		return MAX30102_ERROR;
	return MAX30102_OK;
}

MAX30102_STATUS Max30102_Init(I2C_HandleTypeDef *i2c)
{
	uint8_t uch_dummy;
	i2c_max30102 = i2c;
	if(MAX30102_OK != Max30102_Reset()) //resets the MAX30102
		return MAX30102_ERROR;
	if(MAX30102_OK != Max30102_ReadReg(0,&uch_dummy))
		return MAX30102_ERROR;
	if(MAX30102_OK != Max30102_FifoWritePointer(0x00))
		return MAX30102_ERROR;
	if(MAX30102_OK != Max30102_FifoOverflowCounter(0x00))
		return MAX30102_ERROR;
	if(MAX30102_OK != Max30102_FifoReadPointer(0x00))
		return MAX30102_ERROR;
	if(MAX30102_OK != Max30102_FifoSampleAveraging(FIFO_SMP_AVE_1))
		return MAX30102_ERROR;
	if(MAX30102_OK != Max30102_FifoRolloverEnable(0))
		return MAX30102_ERROR;
	if(MAX30102_OK != Max30102_FifoAlmostFullValue(MAX30102_FIFO_ALMOST_FULL_SAMPLES))
		return MAX30102_ERROR;
	if(MAX30102_OK != Max30102_SetMode(MODE_SPO2_MODE))
		return MAX30102_ERROR;
	if(MAX30102_OK != Max30102_SpO2AdcRange(SPO2_ADC_RGE_4096))
		return MAX30102_ERROR;
	if(MAX30102_OK != Max30102_SpO2SampleRate(SPO2_SAMPLE_RATE))
		return MAX30102_ERROR;
	if(MAX30102_OK != Max30102_SpO2LedPulseWidth(SPO2_PULSE_WIDTH_411))
		return MAX30102_ERROR;
	if(MAX30102_OK != Max30102_Led1PulseAmplitude(MAX30102_RED_LED_CURRENT_LOW))
		return MAX30102_ERROR;
	if(MAX30102_OK != Max30102_Led2PulseAmplitude(MAX30102_IR_LED_CURRENT_LOW))
		return MAX30102_ERROR;
	if(MAX30102_OK != Max30102_SetIntAlmostFullEnabled(1))
		return MAX30102_ERROR;
	if(MAX30102_OK != Max30102_SetIntFifoDataReadyEnabled(1))
		return MAX30102_ERROR;
//	if(MAX30102_OK != Max30102_WriteReg(REG_PILOT_PA,0x7f))   // Choose value for ~ 25mA for Pilot LED
//		return MAX30102_ERROR;
	StateMachine = MAX30102_STATE_BEGIN;
	return MAX30102_OK;
}
